templates/deployment1.yml
# harness.io/skip-file-for-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 'maintainence-app'
  name: 'maintainence-app'
  namespace: pedro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'maintainence-app'
  template:
    metadata:
      annotations:
        rollme: 'SZsYY'
      labels:
        app: 'maintainence-app'
    spec:
      imagePullSecrets:
        - name: faf-cfg-dockercfg
      nodeSelector:
        'kubernetes.io/os': 'linux'
      containers:
        - name: undermaintenance
          image: faf-docker-snapshot-local.docker.fis.dev/undermaintenance:322788
          imagePullPolicy: Always
        - name: busybox
          image: busybox
          args:
            - /bin/sh
            - -c
            - while sleep 1;do wget -q -O- https://google.com; echo "Checking"; done
