templates/service1.yml
# harness.io/skip-file-for-deploy
apiVersion: v1
kind: Service
metadata:
  name: 'maintainence-service'
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: 'true'
  namespace: pedro
spec:
  type: LoadBalancer
  selector:
    app: 'maintainence-app'
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
